--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -1,8 +1,9 @@
 body{
 background-image:url(../img/dog-313357_960_720.jpg);
 }
-*{
-    box-sizing: border-box;
+
+:root{
+    --backgrund-nav:rgba(38, 51, 67, 0.8);
 }
 
 .Grids-Container{
