vaiabler for color

--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -6,6 +6,8 @@ background-image:url(../img/dog-313357_960_720.jpg);
 
 :root{
     --backgrund-nav:rgba(38, 51, 67, 0.8);
+    --Text_Color_1:#F77D26;
+    --paragraf:#4d2600;
 }
 
 .Grids-Container{
