--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -28,3 +28,12 @@ background-image:url(../img/dog-313357_960_720.jpg);
     background-color: var(--background-header-nav);
     height: 100px;
 }
+/* header meny */
+li.meny{
+    display: inline;  
+    list-style-type:none;
+    margin:2%;
+    font-size:150%;
+    font-family: third-font;
+    color:var(--Text_Color_1);
+}
