--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -28,6 +28,8 @@ background-image:url(../img/dog-313357_960_720.jpg);
     background-color: var(--background-header-nav);
     height: 100px;
 }
+
+
 /* header meny */
 li.meny{
     display: inline;  
@@ -36,4 +38,14 @@ li.meny{
     font-size:150%;
     font-family: third-font;
     color:var(--Text_Color_1);
+}
+
+/* positionering logga */
+
+.logga{
+    padding-top: 0px;
+    width: 40%;
+    height: auto;
+    
+  
 }
