--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -32,3 +32,10 @@ background-image:url(../img/dog-313357_960_720.jpg);
     background-color:var(--backgrund-nav);
     height: 100px;
 }
+
+/*font-face*/
+
+@font-face{
+    font-family:paragraph-font;
+    src:url(fonts/Tahoma\ Regular\ font.ttf);
+    font-weight:bold;}
