--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -44,3 +44,8 @@ background-image:url(../img/dog-313357_960_720.jpg);
      font-family:meny-font;
      src:url(fonts/Comfortaa-Bold.ttf);
     font-weight:bold;}
+
+@font-face{
+        font-family:navigation-font;
+        src:url(fonts/Merienda-Bold.ttf);
+        font-weight:bold;}
