--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -20,8 +20,13 @@ background-image:url(../img/dog-313357_960_720.jpg);
     border: 2px solid black;
     row-gap:10px;
     background-color: white;
-	grid-template-columns: repeat(12,1fr);
+	grid-template-columns: repeat(1,1fr);
 	grid-template-rows: auto;
+    grid-template-areas: 
+    "header-nav"
+    "header-img"
+    "main"
+    "footer";
 }
 /* header meny */
 
