--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -60,6 +60,8 @@ background-image:url(../img/dog-313357_960_720.jpg);
 }
 #footer{
     grid-area:footer;
+    height: auto;
+    background-color: var(--background-header-nav);
 }
 
 
