--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -85,7 +85,8 @@ background-image:url(../img/dog-313357_960_720.jpg);
 
 .li.meny li:hover{
     display: inline;
-    background-color: ;
+    color:white ;
+    text-shadow: 1px 1px 2px gray , 0 0 25px white, 0 0 5px black;
     border-radius: 1%;
     margin: 2%
 }
