--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -88,7 +88,7 @@ li.meny:hover{
     color:white ;
     text-shadow: 1px 1px 2px gray , 0 0 25px white, 0 0 5px black;
     border-radius: 1%;
-    margin: 2%
+    margin: 2%;
 }
 
 
