--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -56,6 +56,11 @@ background-image:url(../img/dog-313357_960_720.jpg);
         text-decoration: underline;
     }
 
+    li.meny:hover{
+        color:white;
+        text-shadow: 1px 1px 2px gray , 0 0 25px white, 0 0 5px black;
+    }
+
 
 #header-img{
     grid-area: header-img;
