--- a/css/dagis.css
+++ b/css/dagis.css
@@ -1,3 +1,37 @@
 .meny-pic{
     max-width: 100%;
 }
+
+/*main content container width grids*/
+
+#main{
+    display: grid;
+    width: 100%;
+    height: auto;
+    grid-template-columns: repeat(1,1fr);
+	grid-template-rows: auto;
+    grid-template-areas: 
+
+    "routines-container"
+    "list-routines-container"
+    "Rules-container"
+    "disease-container"
+    "price-list"
+
+}
+
+#routines-container{
+    grid-area: routines-container;
+}
+#list-routines-container{
+    grid-area: list-routines-container;
+}
+#Rules-container{
+    grid-area: Rules-container;
+}
+#disease-container{
+    grid-area: disease-container;
+}
+#price-list{
+    grid-area: price-list;
+}
