--- a/css/dagis.css
+++ b/css/dagis.css
@@ -8,9 +8,11 @@
     display: grid;
     width: 100%;
     height: auto;
+    margin-top:5%; 
     grid-template-columns: repeat(1,1fr);
 	grid-template-rows: auto;
-    grid-template-areas: 
+    grid-template-areas:
+    
 
     "routines-container"
     "list-routines-container"
@@ -19,22 +21,33 @@
     "price-list"
 
 }
+
+#header-img{
+    display: flex;
+    justify-content: center;
+}
 /*grids container for routines*/
 
 #routines-container{
+
+    width: 100%;
     display: grid;
     grid-area: routines-container;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(6,1fr);
 	grid-template-rows: auto;
     grid-template-areas: 
-    "textbox-routines pomeranian-img pugs-img";
+    "textbox-routines textbox-routines textbox-routines pomeranian-img pugs-img pugs-img";
     height: auto;
+    margin: auto;
 }
 
 /*grid-area for container routines*/
 
 #textbox-routines{
   grid-area: textbox-routines;
+  padding-left:8%;
+  padding-right:8%;
+  
 }
 #pomeranian-img{
   grid-area:pomeranian-img;
