--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -89,6 +89,11 @@ li.meny{
     color:var(--Text_Color_1);
 }
 
+h1,h2{
+  font-family:meny-font;
+  color:var(--Text_Color_1)
+}
+
 
 /*font-face*/
 
