--- a/css/dagis.css
+++ b/css/dagis.css
@@ -77,3 +77,36 @@
     grid-area: price-list;
     height: auto;
 }
+
+/*list for routines*/ 
+   #open{
+    list-style-image: url(../img/open-1.png);
+    }
+    #Walk1{
+    list-style-image: url(../img/Koppel-ikon.png);
+    }
+    #food{
+    list-style-image: url(../img/food-ikon.png);
+    }
+    #rest{
+    list-style-image: url(../img/rest.png);
+    }
+    #walk2{
+    list-style-image: url(../img/Koppel-ikon.png);
+    }
+    #home{
+    list-style-image: url(../img/home-1.png);
+    }
+    #close{
+    list-style-image: url(../img/close-1.png);
+    }
+
+    /*container-list flexbox*/
+
+    #list-routines-container{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-evenly;
+    }
+
+    
