--- a/css/dagis.css
+++ b/css/dagis.css
@@ -32,6 +32,7 @@
 
     width: 100%;
     display: grid;
+    column-gap:5%;
     grid-area: routines-container;
     grid-template-columns: repeat(6,1fr);
 	grid-template-rows: auto;
@@ -45,16 +46,18 @@
 
 #textbox-routines{
   grid-area: textbox-routines;
-  padding-left:8%;
-  padding-right:8%;
+  padding-left:12%;
+  padding-right:5%;
   
 }
 #pomeranian-img{
   grid-area:pomeranian-img;
+  border-radius: 50%;
     
 }
 #pugs-img{
   grid-area:pugs-img;
+  border-radius: 40%;
     
 }
 
@@ -104,9 +107,12 @@
     /*container-list flexbox*/
 
     #list-routines-container{
+        margin-top: 2%;
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-evenly;
     }
 
-    
+    #bulldog-pic{
+        border-radius: 20%;
+    }
