--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -15,6 +15,7 @@ background-image:url(../img/dog-313357_960_720.jpg);
 
 .Grids-Container{
     display: grid;
+    justify-content: center;
     width: 90%;
     height: auto;
     border: 2px solid black;
