--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -81,11 +81,12 @@ background-image:url(../img/dog-313357_960_720.jpg);
 /*listan/menyn*/
 
 
-li.meny{
+li.meny,a{
+    text-decoration: none;
     display: inline;  
     list-style-type:none;
     margin:2%;
-    font-size:150%;
+    font-size:130%;
     
     font-family:meny-font;
     color:var(--Text_Color_1);
