--- a/css/dagis.css
+++ b/css/dagis.css
@@ -171,3 +171,11 @@
             font-size: 120%;
         }
     }
+
+    @media screen and (max-width:960px) and (min-width:768px){
+
+    }
+
+    @media screen and (max-width:767px){
+        
+    }
