--- a/css/dagis.css
+++ b/css/dagis.css
@@ -13,8 +13,6 @@
 	grid-template-rows: auto;
     grid-template-areas:
     
-    
-
     "routines-container"
     "list-routines-container"
     "Rules-container"
@@ -171,11 +169,30 @@
             font-size: 120%;
         }
     }
-
+/*For small desktop*/
+    @media screen and (max-width:1200px) and (min-width:960px)
+    {
+/*For tablet*/
+    }
     @media screen and (max-width:960px) and (min-width:768px){
+
+        #disease-container{
+            flex-direction:row-reverse;
+            
+        }
+
+        li.meny,a{
+            font-size: 100%;
+        }
+
+        #header-nav{
+            align-items: center;
+        }
 
     }
 
+    /*mobile*/
+
     @media screen and (max-width:767px){
-        
+
     }
