--- a/css/dagis.css
+++ b/css/dagis.css
@@ -200,6 +200,12 @@
             align-items: center;
         }
 
+        /*img size*/
+
+        #logga{}
+        #pomeranian-img{}
+        #bulldog-pic{}
+
     }
 
     /*mobile*/
