--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: auto;
+    grid-template-columns: auto;
     grid-template-areas:
     "text1 text1 text1 text1 "
     "img1 img1 text2 text2"
@@ -60,9 +61,9 @@
     }
 }
 .icon-box{
-    width: 300px;
-    display:flex ;
-    justify-content: center;
+    width: 200px;
+    
+   
 }
 
 
