--- a/css/dagis.css
+++ b/css/dagis.css
@@ -70,6 +70,10 @@
 #list-routines-container{
     grid-area: list-routines-container;
     height: auto;
+    margin-top: 2%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
 }
 #Rules-container{
     grid-area: Rules-container;
@@ -113,12 +117,7 @@
 
     /*container-list flexbox*/
 
-    #list-routines-container{
-        margin-top: 2%;
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-evenly;
-    }
+    
 
     #bulldog-pic{
         border-radius: 20%;
@@ -205,6 +204,11 @@
             align-items: center;
         }
 
+        #list-routines-container{
+            justify-content: flex-start;
+            column-gap: 5%;
+        }
+
         /*img size*/
 
         #syringe{
@@ -214,6 +218,15 @@
         #pomeranian-img{
             width: 300px;
             height: auto;
+        }
+       
+        #bulldog-pic{
+            width: 300px;
+            height: 250px;
+        }
+        #container-list{
+            width:40%;
+           
         }
        
         #sick-dog{
