--- a/css/dagis.css
+++ b/css/dagis.css
@@ -138,11 +138,16 @@
         width: 50%;
     }
 
-    #syringe, #price-pic,#pugs{
+     #price-pic,#pugs{
         padding:5%;
         height: auto;
         border-radius: 40%;
        
+    }
+    #syringe{
+        padding:5%;
+        height: 250px;
+        border-radius: 40%;
     }
 
     #sick-dog{
