changes and positioning

--- a/css/index.css
+++ b/css/index.css
@@ -8,12 +8,13 @@
 #main{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(6,1fr);
     grid-template-rows: auto;
-    
+    justify-content: center;
     grid-template-areas:
-    "text1 text1 text1 text1 "
-    "img1 img1 text2 text2"
+    "text1 text1 text1 text1 text1 text1"
+    "icon-box1 icon-box2 icon-box3 icon-box4 text2 text2"
+    "img1 img1 img1 0 0 0"
     
    }  
 
@@ -62,13 +63,40 @@
         margin-left: 100px;
         
     }
-}
-.icon-box{
-    width: 200px;
-    
    
-}
+   
+    .icon-box1{
+    grid-area: icon-box1;
+    margin-left: 30px;
+    margin-top: 50px;
+    }
+    .icon-box2{
+    grid-area: icon-box2;
+    margin-left: 30px;
+    margin-top: 50px;
+    }
+    .icon-box3{
+        grid-area: icon-box3;
+        margin-left: 30px;
+        margin-top: 50px;
 
+    }
+    .icon-box4{
+        grid-area: icon-box4;
+        margin-left: 30px;
+        margin-top: 50px;
+        
+
+    }
+
+
+    @font-face{
+        font-family:icon-font;
+        src:url(../fonts/Tahoma\ Regular\ font.ttf);
+        font-weight:bold;}
+
+
+    
 
     
     
