--- a/css/dagis.css
+++ b/css/dagis.css
@@ -249,6 +249,12 @@
 
         /*img size*/
 
+        .meny-pic{
+
+            margin-top:15%;
+            width: 600px;
+        }
+
         #syringe{
             display:none;
 
@@ -287,5 +293,98 @@
 
     @media screen and (max-width:767px)
     {
+        body{
+            background-image:none;
+            }
+            .Grids-Container{
+                width:100%;
+                justify-content: center;
+            }
+
+            #main{
+                width: 100%;
+                justify-content: center;
+            }
+
+            #header-nav{
+                width: 100%;
+            }
+
+
+            /*img*/
+            #header-img{
+               width: 100%;
+            }
+
+            .meny-pic{
+
+                margin-top:15%;
+                width: 400px;
+            }
+
+            /*change direktion in flex-box*/
+            #routines-container{
+                width: 100%;
+                justify-items: center;
+                grid-template-columns: repeat(6,1fr);
+                grid-template-rows: auto;
+                grid-template-areas: 
+                "textbox-routines textbox-routines textbox-routines textbox-routines textbox-routines textbox-routines"
+                 "pomeranian-img pomeranian-img  pomeranian-img pomeranian-img pomeranian-img pomeranian-img";
+            }
+            #list-routines-container{
+                flex-direction:column;
+                align-items: center;
+               
+            }
+            #Rules-container{
+               flex-direction: column;
+               align-items: center;
+            }
+            #disease-container{
+                flex-direction:column;
+                align-items: center;
+               
+            }
+            
+            #price-list{
+                flex-direction: column;
+                align-items: center;
+            }
+
+            /*img size*/
+            #syringe{
+                display:none;
+    
+            }
+            #pomeranian-img{
+                width: 300px;
+                height: auto;
+            }
+            #pugs{
+                display: none;
+            }
+           
+            #bulldog-pic{
+                width: 300px;
+                height: 250px;
+            }
+            #container-list{
+                width:40%;
+               
+            }
+           
+            #sick-dog{
+                
+                width: 200px;
+                height: auto;
+            }
+            #price-pic{
+                
+                width: 200px;
+                height: auto;
+            }
+            
+
 
     }
