--- a/css/dagis.css
+++ b/css/dagis.css
@@ -298,16 +298,17 @@
             }
             .Grids-Container{
                 width:100%;
-                justify-content: center;
             }
 
             #main{
                 width: 100%;
                 justify-content: center;
+                border:solid;
             }
 
             #header-nav{
-                width: 100%;
+                width: 110%;
+                margin-left: 0px;
             }
 
 
@@ -384,7 +385,18 @@
                 width: 200px;
                 height: auto;
             }
-            
+
+            p,li{
+                font-size: 1.5vw;
+            }
+            .logga{
+                order: 1;
+                 padding-top: 0px;
+                 width:40%;
+                 height: 100px;
+                 
+               
+             }
 
 
     }
