--- a/css/dagis.css
+++ b/css/dagis.css
@@ -8,7 +8,7 @@
     display: grid;
     width: 90%;
     height: auto;
-    justify-content: center;
+    justify-items: center;
     margin-top:5%; 
     grid-template-columns: repeat(1,1fr);
 	grid-template-rows: auto;
@@ -302,7 +302,7 @@
 
             #main{
                 width: 100%;
-                justify-content: center;
+                justify-items: center;
                 border:solid;
             }
 
@@ -397,6 +397,8 @@
                  
                
              }
+
+          
 
 
     }
