--- a/css/dagis.css
+++ b/css/dagis.css
@@ -22,7 +22,9 @@
     "price-list"
 
 }
-
+#footer{
+    width: 100%;
+}
 #header-img{
     display: flex;
     justify-content: center;
@@ -304,7 +306,7 @@
             #main{
                 width: 100%;
                 justify-items: center;
-                border:solid;
+    
             }
 
             #header-nav{
