--- a/css/dagis.css
+++ b/css/dagis.css
@@ -237,16 +237,30 @@
         
         }
         #burger{
-            order:2;
-            margin-right:3%;
+          position: absolute;
+          right:7px;
         }
 
         #header-nav{
             align-items: center;
         }
 
-        li.meny{
-        display: none;
+        .nav-text{
+        position: absolute;
+        right:0px;
+        height: 86vh;
+        top:13vh;
+        background-color: rgb(129, 154, 201);
+        width:30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 2%;
+        padding-top: 2%;
+
+        }
+        li.meny,a{
+            margin:0%;
         }
        
     }
