--- a/css/dagis.css
+++ b/css/dagis.css
@@ -239,7 +239,7 @@
         #burger{
           position: absolute;
           cursor: pointer;
-          right:7px;
+          right: 5%;
         }
 
         #header-nav{
@@ -251,14 +251,14 @@
         .nav-text{
         position: absolute;
         right:0px;
-        height: 86vh;
-        top:13vh;
-        background-color: rgb(129, 154, 201);
+        height: 85.5vh;
+        top:12.5vh;
+        background-color: rgb(81, 92, 112);
         width:30%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        row-gap: 2%;
+        row-gap: 8%;
         padding-top: 2%;
         transform: translateX(120%);
         transition: transform 0.5s ease-in;
@@ -269,7 +269,7 @@
         }
         li.meny,a{
             margin:0%;
-            opacity: 0;
+           
         }
        
     }
@@ -375,6 +375,11 @@
                 width: 400px;
             }
 
+            #burger{
+                right: 10%;
+            }
+
+
             /*change direktion in flex-box*/
             #routines-container{
                 width: 100%;
@@ -405,9 +410,17 @@
                 align-items: center;
             }
 
+
             #textbox-routines{
                width: 70%;
+             
                 
+              }
+
+              #container-list{
+                  width: 100%;
+                  padding-left: 10%;
+                  
               }
 
             /*img size*/
@@ -427,10 +440,7 @@
                 width: 300px;
                 height: 250px;
             }
-            #container-list{
-                width:40%;
-               
-            }
+           
            
             #sick-dog{
                 
