--- a/css/index.css
+++ b/css/index.css
@@ -11,10 +11,13 @@
 
 
 #main{
-width: 90%;
+   
+width: auto;
 display: grid;
 grid-template-columns: repeat(8,1fr);
 grid-template-rows: auto;
+justify-items: space-between;
+
 
 grid-template-areas:
 "text1 text1 img1 img1 img1 img1 img1 img1"
@@ -44,8 +47,9 @@ grid-template-areas:
     
    
     #textbox1{
+        margin-left: 20%;
         margin-top: 20%;
-        width: 350px;
+        width: 80%;
         height: auto;
         grid-area:text1;
         
@@ -53,36 +57,48 @@ grid-template-areas:
     }
 
     #img-box1{
+        
       grid-area:img1;
       height: auto;
-      margin-top: 40%;
+      margin-top: 70%;
+      margin-right: 30%;
         
     }
     #img-box2{
         grid-area:img2;
+       margin-top: 20%;
         
         height: auto;
-        margin-top: 30%;
+        
        
         
         
     }
 
     #img-box3{
+        margin-top: 20%;
         
+        margin-left: auto;
+        margin-right: auto;
         
-        margin-top: 30%;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+        gap: 4%;
+
 
         grid-area: img-bottom;
     }
 
+  
+
 
 
     #textbox2{
-        margin-top: 70%;
+        margin-right: 5%;
+        margin-top: 20%;
+      
+        
         width: 100%;
         height: auto;
         grid-area:text2;
@@ -109,7 +125,7 @@ grid-template-areas:
 
 
 #icon-box{
-    margin-top: 60%;
+    margin-top: 40%;
     width: 150%;
     display: flex;
     flex-direction: row;
@@ -154,10 +170,7 @@ height: 10%;
 }
 
 
-@font-face{
-    font-family:icon-font;
-    src:url(../fonts/Tahoma\ Regular\ font.ttf);
-    font-weight:bold;}
+
 
 
 
