--- a/css/dagis.css
+++ b/css/dagis.css
@@ -58,10 +58,10 @@
   
 }
 #pomeranian-img{
-    
-  margin: 5%;
+
+width: 350px;
+height: auto;
   grid-area:pomeranian-img;
-  border-radius: 5%;
     
 }
 
@@ -140,9 +140,12 @@
     }
     #price-list-box{
         border: dotted 2px rgba(38, 51, 67, 0.8);
-        width: 400px;
+        width: 800px;
         height: 200px;
         padding:2%;
+    }
+
+    #rubrik-price{
         text-align: center;
     }
     #Rules-textbox, #disease-textbox{
@@ -153,10 +156,9 @@
      #price-pic{
         padding:5%;
         height: auto;
-        border-radius: 40%;
+       
     }
     #pugs{
-        border-radius: 10%;
         padding:5%;
         height: auto;
     }
@@ -167,11 +169,13 @@
     }
 
     #sick-dog{
-        border-radius:20%;
+     
         margin-left: 2%;
+        width: 350px;
+        height: auto;
     }
 
-    #price-pic, #pugs{
+    #price-pic{
         width: 250px;
        
     }
@@ -200,6 +204,12 @@
         #pomeranian-img{
             width: 300px;
             height: auto;
+        }
+
+        #price-list-box{
+            width: 500px;
+            height: 200px;
+         
         }
     }
 /*For small desktop*/
@@ -290,6 +300,13 @@
         li.meny,a{
             margin:0%;
            
+        }
+
+        #price-list-box{
+         
+            width: 400px;
+            height: 150px;
+            padding:2%;
         }
        
     }
