added black paw

--- a/css/dagis.css
+++ b/css/dagis.css
@@ -181,7 +181,7 @@ height: auto;
     }
 
     #dollar{
-        list-style-image: url(../img/);
+        list-style-image: url(../img/black-paw-20px.png);
     }
 
    
