--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -83,8 +83,10 @@ background-image:url(../img/dog-313357_960_720.jpg);
     background-color: var(--background-header-nav);
 }
 
-
-
+.footer-text{
+    color: var(--Text_Color_1);
+    font-family: paragraph-font;
+}
 
 
 
