--- a/css/dagis.css
+++ b/css/dagis.css
@@ -309,6 +309,11 @@ height: auto;
             padding:2%;
         }
        
+        
+        #footer-img{
+            width: 80px;
+            height: auto;
+         }
     }
 /*For tablet*/
     
@@ -334,6 +339,7 @@ height: auto;
             justify-content: flex-start;
             column-gap: 5%;
         }
+
 
 
         /*img size*/
@@ -390,6 +396,7 @@ height: auto;
             #main{
                 width: 100%;
                 justify-items: center;
+                row-gap: 2%;
     
             }
 
@@ -447,6 +454,7 @@ height: auto;
             #price-list{
                 flex-direction: column;
                 align-items: center;
+                margin-bottom: 35%;
             }
 
 
