--- a/css/gemensam.css
+++ b/css/gemensam.css
@@ -73,6 +73,7 @@ background-image:url(../img/dog-313357_960_720.jpg);
     grid-area:main;
 }
 #footer{
+    width: 100%;
     padding-top: 2%;
     padding-bottom: 2%;
     grid-area:footer;
