--- a/css/index.css
+++ b/css/index.css
@@ -47,9 +47,9 @@ grid-template-areas:
     
    
     #textbox1{
-        margin-left: 20%;
-        margin-top: 20%;
-        width: 80%;
+        margin-left: 10%;
+        margin-top: 10%;
+        width: 100%;
         height: auto;
         grid-area:text1;
         
@@ -57,7 +57,7 @@ grid-template-areas:
     }
 
     #img-box1{
-        
+      border: 1px solid black;  
       grid-area:img1;
       height: auto;
       margin-top: 70%;
@@ -95,11 +95,12 @@ grid-template-areas:
 
 
     #textbox2{
-        margin-right: 5%;
-        margin-top: 20%;
-      
-        
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        border: 1px solid black;
+        margin-top: 30%;
+        margin-right: 50px;
+        width: 600px;
         height: auto;
         grid-area:text2;
        
@@ -125,8 +126,9 @@ grid-template-areas:
 
 
 #icon-box{
+    border: 1px solid black;
     margin-top: 40%;
-    width: 150%;
+    width: 120%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
