--- a/css/om_mig.css
+++ b/css/om_mig.css
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
- 
+
 .img-box{
     max-width: 1400px;
     width: 100%;
@@ -13,12 +12,7 @@
 }
 
   /*standard skärm */
-=======
-
-    
-    
-   
-    
+======
       
     
     
